# document-loader

./: .env.admin  .env.azure  .env.example  .env.localhost  .gitignore  CHANGELOG.md  CLAUDE.md  CLI_API_MAPPING.md  DELTA_SYNC_FIX.md  DEVOPS_SETUP.md  Dockerfile  Document_Loader_API.postman_collection.json  FINAL_STATUS_REPORT.md  FIXES_IMPLEMENTED.md  FOREIGN_KEY_CONSTRAINT_FIX.md  GRAPH_DELTA_API_IMPLEMENTATION.md  KNOWLEDGE_BASE_CONFIG.md  MANIFEST.in  MULTI_SOURCE_ERROR_FIXES.md  MULTI_SOURCE_REFACTOR_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  Postman_Environment_Development.json  QUICK_START.md  README.md  README_START_SERVICES.md  SCHEDULER_INTEGRATION_GUIDE.md  SOLUTION_SNAPSHOT.md  SOURCE_CONFIG_GUIDE.md  STATUS_SUMMARY.md  SYNC_RUN_INITIALIZATION_FIX.md  VERIFICATION_GUIDE.md  check_all_kbs.py  check_kb_credentials.py  check_premium_rms_kb.py  cli-test.txt  cli_config_admin.py  config_admin.sh  credentials.txt  db_viewer.py  debug_multi_source_sync.py  (+65 more)
ado-pipelines/: build-and-push.yaml
configs/: FOLDER_HIERARCHY_FEATURE.md  PremiumRMs2-kb.json  PremiumRMs3-kb.json  PremiumRMs4-kb.json  athena.json  enterprise_sharepoint_config.json  hr.json  hr_source.json  hr_test.json  internal-audit-kb-config.json  mixed_source_for_cli.json  mixed_source_test.json  mixed_source_with_processing.json  multi_source_example.json  onedrive_test_business.json  onedrive_test_personal.json  premium-rms-hierarchy-example.json  premium-rms-kb-config.json  premium-rms-kb-config_PARALLEL_SYNC.json
configuration/: settings.DEV.json
deployment/: README.md  azure-devops-pipeline.yml  azure-pipelines-advanced.yml  azure-pipelines.yml  (+3 more)
(+207 files in other folders)
