[project]
name = "document-loader"
version = "0.1.0"
description = "A flexible document management system for RAG systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "asyncpg>=0.30.0",
    "click>=8.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "pydapper>=0.12.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
]

[project.scripts]
document-loader = "document_loader.cli:main"
docloader = "document_loader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
