[project]
name = "document-loader"
version = "0.1.0"
description = "A flexible document management system for RAG systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "asyncpg>=0.30.0",
    "azwrap>=0.1.4",
    "click>=8.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "pydapper>=0.12.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "Office365-REST-Python-Client>=2.5.7",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.9.1",
    "structlog>=25.4.0",
    "croniter>=1.4.1",
]

[project.scripts]
document-loader = "document_loader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
